2009-05-14  Olaf Lenz  <lenzo@pckr97.mpip-mainz.mpg.de>

	* doc/pbctools.tex: Restructured introduction, abstract and basic
	usage section. 

	* pbcjoin.tcl (pbcjoin): Added option "-[no]border", which allows
	to specify the maximal depth were atoms of a broken compound can
	be found inside the unit cell. Currently works only for orthorhombic
	unit cells.

	* pbcwrap.tcl (pbcwrap): "-center" now understands a selection as
	argument again, for backward compatibility. However, a deprecation
	warning is printed.

2009-05-11  Olaf Lenz  <olenz@qwghlm>

	* pbcjoin.tcl (pbcjoin): Some more improvements, added more
	detailed progress report.

2009-04-30  Olaf Lenz  <lenzo@pckr97.mpip-mainz.mpg.de>

	* pbcjoin.tcl (pbcjoin): Some more improvements to "pbc
	join". Im my tests, I got a performance gain of about 50%.

2009-04-23  Olaf Lenz  <olenz@qwghlm>

	* pbcjoin.tcl: Thanks to Dan Lussier: significantly reduced memory
	footprint of "pbc join".

2009-02-10  Olaf Lenz  <olenz@true>

	* pbcjoin.tcl: Thanks to Axel Kohlmeyer, join now checks whether the pbc cell
	parameters are reasonable.

	* pbctools.tcl: Added implementation of vmdcon for VMD version
	before 1.8.7.
	
	* *.tcl: All functions use vmdcon now instead of "puts".

2009-01-21  Olaf Lenz  <olenz@true>

	* Advanced to version 2.5.

	* pbcbox.tcl, pbcwrap.tcl, pbctools.tex: Commands pbcwrap and
	pbcbox: Added option "-centersel" that takes a selection. The
	option "-center" does not take the $sel argument anymore, instead
	the keywords "com", "centerofmass", "bb" or "boundingbox" can be
	used to denote that the center of the box/wrapping is in the
	center of mass or the center of the bounding box of the given
	selection.

2008-11-20  Olaf Lenz  <lenzo@pckr76.mpip-mainz.mpg.de>

	* Advanced to version 2.4.
	
	* maintainer/: Added maintainer directory that contains scripts
	and notes for the maintainer.

	* pbcwrap.tcl, pbcunwrap.tcl, pbcjoin.tcl: Added option
	"-noverbose" for completeness.
